--- a/src/styles.css
+++ b/src/styles.css
@@ -1,13 +1,17 @@
-@import url('https://fonts.googleapis.com/css2?family=Bitter:wght@400;500;600;700;800;900&family=Nunito:wght@200;300;400;500;600;700;800;900&display=swap');
+@import url("https://fonts.googleapis.com/css2?family=Bitter:wght@400;500;600;700;800;900&family=Nunito:wght@200;300;400;500;600;700;800;900&display=swap");
 
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
 
-.card{
-    @apply bg-white rounded overflow-hidden shadow-md relative;
+.card {
+  @apply bg-white rounded overflow-hidden shadow-md relative;
 }
 
-.badge{
-    @apply bg-secondary-100 text-secondary-200 text-xs uppercase font-bold rounded-full p-2 absolute top-0 ml-2 mt-2;
+.badge {
+  @apply bg-secondary-100 text-secondary-200 text-xs uppercase font-bold rounded-full p-2 absolute top-0 ml-2 mt-2;
+}
+
+.btn {
+  @apply rounded-full py-2 px-3 uppercase text-xs cursor-pointer tracking-wider
 }
